--- a/backend/app/static/home.html
+++ b/backend/app/static/home.html
@@ -15,7 +15,7 @@
 		.chip.active { background:#17315f; color:#d9e5ff; }
 		.sidebar .item { padding:8px 10px; border-radius:8px; margin:6px 0; background:#0e1a34; border:1px solid #16264a; cursor:pointer; }
 		.topbar { display:flex; align-items:center; justify-content:space-between; padding:12px 16px; border-bottom:1px solid var(--border); background:#0b1220; }
-		.toggle { display:none; }
+		.toggle { display:inline-flex; }
 		@media (max-width: 900px) {
 			.layout { grid-template-columns: 0 1fr; }
 			.sidebar { position: fixed; left:0; top:0; bottom:0; width: 280px; transform: translateX(-100%); transition: transform .2s ease; z-index: 20; }
@@ -25,6 +25,7 @@
 		.welcome { text-align:center; margin: 26px 0; }
 		.footer-bar { display:flex; gap:10px; align-items:center; }
 		.header-actions { display:flex; gap:10px; }
+		.overlay-head { display:flex; align-items:center; justify-content:space-between; margin-bottom:6px; }
 	</style>
 </head>
 <body>
@@ -36,7 +37,7 @@
 			<span class="badge">Online</span>
 		</div>
 	</div>
-	<div class="layout">
+	<div class="layout" id="layout">
 		<aside class="sidebar" id="sidebar">
 			<h3>History <button id="newChat" style="margin-left:auto;" class="chip">+ New Chat</button></h3>
 			<div class="chipbar">
@@ -67,10 +68,11 @@
 	</div>
 
 	<div class="overlay" id="overlay" hidden>
-		<h4>Gemini overlay summary</h4>
+		<div class="overlay-head"><h4>Gemini overlay summary</h4><button id="overlayClose" class="chip" style="padding:4px 8px;">✕</button></div>
 		<div class="content" id="overlay-content"></div>
 		<div class="small">Context segments used to generate the answer.</div>
 	</div>
+	<button id="overlayToggle" class="overlay-toggle" title="Show context">⧉</button>
 
 	<script src="/static/home.js"></script>
 </body>
