--- a/backend/app/static/home.html
+++ b/backend/app/static/home.html
@@ -56,8 +56,8 @@
 				<h2>Welcome to Medical Assistant</h2>
 				<p class="small">I can help you understand symptoms and provide information from medical textbooks.</p>
 			</div>
-			<div id="chat" class="container" style="height: calc(100vh - 140px); grid-template-rows: 1fr auto; max-width: 900px;">
-				<main id="messages" style="background: rgba(14,22,38,0.8);"></main>
+			<div id="chatShell" class="container" style="grid-template-rows: 1fr auto; max-width: 900px;">
+				<main id="messages" class="messages" style="background: rgba(14,22,38,0.8);"></main>
 				<footer class="footer-bar">
 					<input id="query" placeholder="Ask me anything about health..." />
 					<button id="mic" class="mic" title="Voice input">🎤</button>
