--- a/backend/app/static/home.html
+++ b/backend/app/static/home.html
@@ -15,13 +15,6 @@
 		.chip.active { background:#17315f; color:#d9e5ff; }
 		.sidebar .item { padding:8px 10px; border-radius:8px; margin:6px 0; background:#0e1a34; border:1px solid #16264a; cursor:pointer; }
 		.topbar { display:flex; align-items:center; justify-content:space-between; padding:12px 16px; border-bottom:1px solid var(--border); background:#0b1220; }
-		.toggle { display:inline-flex; }
-		@media (max-width: 900px) {
-			.layout { grid-template-columns: 0 1fr; }
-			.sidebar { position: fixed; left:0; top:0; bottom:0; width: 280px; transform: translateX(-100%); transition: transform .2s ease; z-index: 20; }
-			.sidebar.open { transform: translateX(0); }
-			.toggle { display:inline-flex; }
-		}
 		.welcome { text-align:center; margin: 26px 0; }
 		.footer-bar { display:flex; gap:10px; align-items:center; }
 		.header-actions { display:flex; gap:10px; }
@@ -30,7 +23,6 @@
 </head>
 <body>
 	<div class="topbar">
-		<button class="toggle" id="toggle">☰</button>
 		<div class="logo">Medical Diagnosis Chatbot</div>
 		<div class="header-actions">
 			<span class="badge">Textbook</span>
@@ -39,7 +31,7 @@
 	</div>
 	<div class="layout" id="layout">
 		<aside class="sidebar" id="sidebar">
-			<h3>History <button id="newChat" style="margin-left:auto;" class="chip">+ New Chat</button></h3>
+			<h3><button id="sideToggle" class="chip" title="Collapse sidebar">☰</button> History <button id="newChat" style="margin-left:auto;" class="chip">+ New Chat</button></h3>
 			<div class="chipbar">
 				<div class="chip active" data-filter="all">All Chats</div>
 				<div class="chip" data-filter="textbook">Textbook</div>
@@ -73,6 +65,7 @@
 		<div class="small">Context segments used to generate the answer.</div>
 	</div>
 	<button id="overlayToggle" class="overlay-toggle" title="Show context">⧉</button>
+	<button id="sideOpener" class="side-opener hidden" title="Open sidebar">☰</button>
 
 	<script src="/static/home.js"></script>
 </body>
